Fix the modal body overflow

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -890,7 +890,7 @@ form {
   }
   .modal-body {
     height: auto;
-    overflow: visible;
+    overflow: scroll;
   }
   .modal-footer {
     line-height: 30px;
